# PFF_PeD

./: CMakeLists.txt  README.md  package.xml
launch/: astra_people.launch  astra_people_bag.launch  kobuki.launch.xml  kobuki_hexagons_kinect.urdf.xacro  navigation.launch  robot.launch  semantic.launch  semantic2.launch  turtlebot_world.launch  velodyne_people.launch  velodyne_people_bag.launch  velodyne_people_odom (copy).launch
rviz_cfg/: astra_people.rviz  velodyne_chairs.rviz  velodyne_doors.rviz  velodyne_people.rviz  velodyne_people_odom.rviz  velodyne_semantic.rviz
src/: astra.cpp  astra_mov_people.cpp  astra_people.cpp  path_sub.cpp  positions  read_txt.cpp  velodyne.cpp  velodyne_chairs.cpp  velodyne_doors.cpp  velodyne_mov_people.cpp  velodyne_people.cpp
